[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhapke"
authors = [
    {name = "Jordan Ando", email = "jkando@hawaii.edu"},
]
description = "Implements Hapke's Radiative Transfer Model"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["hapke", "spectroscopy", "planetary science"]
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "matplotlib"
]
version = "0.1.0"


[tool.setuptools]
packages = ["pyhapke"]