[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhapke"
version = "0.1.0"
authors = [
    {name = "Jordan Ando", email = "jkando@hawaii.edu"},
]
maintainers = [
    {name = "Christian J. Tai Udovicic", email = "cj.taiudovicic@gmail.com"},
]
description = "Implements Hapke's Radiative Transfer Model"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["hapke", "spectroscopy", "planetary science"]
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy",
    "matplotlib",
    "scipy"
    
]


[tool.setuptools]
packages = ["pyhapke"]
